@startuml
title Diagrama Entidad-Relación — Base de Datos MariaDB\n(Database: tienda — 4 tablas reales)

top to bottom direction

skinparam entity {
  BackgroundColor #EEF4FF
  BorderColor #3A6BC9
  FontColor #1A1A2E
}
skinparam ArrowColor #3A6BC9
skinparam backgroundColor #FAFAFA

entity "usuarios" as USR {
  * id_usuario    : INT(11) [PK, AUTO_INCREMENT]
  --
  email          : VARCHAR(255) [UNIQUE, NOT NULL]
  nombre         : VARCHAR(100) [NOT NULL]
  apellido       : VARCHAR(100) [NOT NULL]
  telefono       : VARCHAR(20)  [nullable]
  password       : VARCHAR(255) [nullable — bcrypt hash]
  created_at     : TIMESTAMP    [DEFAULT current_timestamp()]
  rol            : ENUM('user','admin') [DEFAULT 'user']
  rfc            : VARCHAR(20)  [nullable — datos fiscales CFDI]
  regimen_fiscal : VARCHAR(10)  [nullable]
  uso_cfdi       : VARCHAR(10)  [nullable]
}

entity "productos" as PROD {
  * id          : INT(11) [PK, AUTO_INCREMENT]
  --
  name        : VARCHAR(100)
  price       : DECIMAL(10,2)
  imageUrl    : TEXT
  category    : VARCHAR(50)
  description : TEXT
  inStock     : INT        [DEFAULT 0 — cantidad en existencia]
  activo      : TINYINT(1) [DEFAULT 1]
}

entity "pedidos" as PED {
  * id                : INT(11) [PK, AUTO_INCREMENT]
  --
  # usuario_id        : INT(11) [FK → usuarios.id_usuario, nullable]
  folio              : VARCHAR(100) [NOT NULL]
  paypal_orden_id    : VARCHAR(100) [nullable]
  paypal_estado      : VARCHAR(50)  [nullable]
  subtotal           : DECIMAL(10,2) [DEFAULT 0.00]
  iva                : DECIMAL(10,2) [DEFAULT 0.00]
  total              : DECIMAL(10,2) [DEFAULT 0.00]
  fecha              : TIMESTAMP     [DEFAULT current_timestamp()]
  detalle_json       : LONGTEXT      [nullable — snapshot JSON de items]
  archivo_historial  : VARCHAR(255)  [nullable — ruta al .json en /historial/]
}

entity "password_resets" as PWR {
  * id         : INT(11) [PK, AUTO_INCREMENT]
  --
  email      : VARCHAR(255) [NOT NULL]
  token      : VARCHAR(255) [NOT NULL]
  expires_at : DATETIME     [NOT NULL]
  used       : TINYINT(1)   [DEFAULT 0]
  created_at : TIMESTAMP    [DEFAULT current_timestamp()]
}

' ── Relaciones ───────────────────────────────
USR "1" ||--o{ PED : "1:N\nusuario propietario\ndel pedido (nullable)"
USR "1" ||--o{ PWR : "1:N\nsolicitudes de\nreset por email"


@enduml
